--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ hr{
 				<h1>CSE-B</h1>
 				<hr>
 				<p class="description">Welcome to the web page of CSE-B. <br>Click the buttons for more information!</p>
-               <a href="/web/timetable.html"> <button type="button"  class="btn btn-default animated shake">Students information</button></a> <br>
-               <a href="/web/timetable.html"> <button type="button" class="btn btn-default animated shake">Teachers information</button></a>  <br>
+               <a href="/web/studentinfo.html"> <button type="button"  class="btn btn-default animated shake">Students information</button></a> <br>
+               <a href="/web/teachers.html"> <button type="button" class="btn btn-default animated shake">Teachers information</button></a>  <br>
                <a href="/web/timetable.html">  <button type="button" class="btn btn-default animated shake">College Updates</button> </a>  <br>
                <a href="/web/timetable.html"> <button type="button" class="btn btn-default animated shake">Online Classes</button> </a> 
 			</div>
