--- a/web/notes.html
+++ b/web/notes.html
@@ -1,20 +1,106 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+	<meta charset="UFT-8">
+	<title>CSE-B (2019-2023)</title>
+	<meta name="viewport" content="width=device-witdh, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
+<style>
+
+*{
+	font-family: Roboto, sans-serif;
+	-webkit-font-smoothing: antialiased;
+  text-rendering: optimizedlegibility;
+}
+
+body {
+  text-align:center;
+  width:100%;
+  height:100%;
+	background: rgba(244,165,96,1);
+  background: -webkit-linear-gradient(bottom left, rgba(244,165,96,1) 0%, rgba(245,190,144,1) 100%);
+    background: -o-linear-gradient(bottom left, rgba(244,165,96,1) 0%, rgba(245,190,144,1) 100%);
+    background: linear-gradient(to top right, rgba(244,165,96,1) 0%, rgba(245,190,144,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f4a560', endColorstr='#f5be90', GradientType=1 );
+}
+
+.container {
+  margin:20px auto;
+	display:block;
+  background-color: white;
+    max-width: 500px;
+	margin-top: 20px;
+	border-radius: 10px;
+  margin-bottom:20px;
+}
+
+.date {
+	display:inline-block;
+  font-weight: 400;
+	font-size: 1em;
+	margin-top: 35px;
+	margin-bottom: 0px;
+	padding: 0px;
+	color: #999;
+	text-transform: uppercase;
+}
+
+h1{
+	font-weight: bolder;
+	letter-spacing: 0px;
+	font-size: 2.3em;
+	margin-top: 10px;
+	color: SaddleBrown;
+}
+hr{
+	max-width: 45px;
+	border: 2px solid #e9e9e9;
+}
+
+.description{
+	color: #777;
+	font-weight: 300;
+	font-size: 1.2em;
+	line-height: 22px;
+	margin-bottom: 0px;
+}
+
+
+.btn{
+	margin-top: 10px;
+	margin-bottom: 40px;
+	background-color: SandyBrown;
+	height: 100px;
+	width: 300px;
+	color: white;
+	border:none;
+	font-weight: 700;
+	font-size:1.1em;
+  border-radius:5px;
+}
+.btn:hover{
+	background-color: SaddleBrown;
+	color: white;
+}
+
+</style>
+
+</head>
 <body>
-    <h1>CSE-B Notes</h1>
-    <iframe id="forum_embed"
-  src="javascript:void(0)"
-  scrolling="no"
-  frameborder="0"
-  width="900"
-  height="700">
-</iframe>
-<script type="text/javascript">
-  document.getElementById('forum_embed').src =
-     'https://groups.google.com/forum/embed/?place=forum/studentcseb19'
-     + '&showsearch=true&showpopout=true&showtabs=false'
-     + '&parenturl=' + encodeURIComponent(window.location.href);
-</script>
-    
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<p class="date">2019-2023 Batch</p>
+				<h1>CSE-B</h1>
+				<hr>
+				<p class="description">Welcome to the Class Notes Page of CSE-B. <br>Click the buttons to open the specific Google Drive.!</p>
+               <a href="https://drive.google.com/open?id=1Rxc_Oi0WC61cJ11UxykBKUEfyze-oDOL"> <button type="button"  class="btn btn-default animated shake"> Calculus-II </button></a> <br>
+               <a href="https://drive.google.com/open?id=1_Gm3-wJ_B86lSawgKWYqDbYj7zMHfjWB"> <button type="button" class="btn btn-default animated shake"> UPEM </button></a>  <br>
+               <a href="https://drive.google.com/open?id=13YhT1zixQTP2TgrmZ4Twg6UqeGperbPl">  <button type="button" class="btn btn-default animated shake"> DSA </button> </a>  <br>
+               <a href="https://drive.google.com/open?id=1KG36E6NTxaoS1ggwGsTmOWv-dX1-TAPI"> <button type="button" class="btn btn-default animated shake"> IGT </button> </a> 
+               <a href="https://drive.google.com/open?id=1kyOfTt7Qkmwpw8LMTEkOfr-kZrIynexp"> <button type="button" class="btn btn-default animated shake"> CTC </button> </a> 
+			</div>
+		</div>	
+	</div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </body>
 </html>
