--- a/web/announcements.html
+++ b/web/announcements.html
@@ -2,7 +2,7 @@
 <html>
 <body>
     <h1>CSE-B Announcements</h1>
-    <p>Submit the UPEM Assignment by 10/05/2020</p>
+    <p>Submit the UPEM Assignment by 10/05/2020 | Keep update your Minor Assignment <p>
     
 </body>
 </html>
