--- a/web/notes.html
+++ b/web/notes.html
@@ -93,11 +93,12 @@ hr{
 				<h1>CSE-B</h1>
 				<hr>
 				<p class="description">Welcome to the Class Notes Page of CSE-B. <br>Click the buttons to open the specific Google Drive.!</p>
-               <a href="https://drive.google.com/open?id=1Zs2MYifHfda-wEge644ErRA6TLnp7VKv"> <button type="button"  class="btn btn-default animated shake"> Calculus-II </button></a> <br>
-               <a href="https://drive.google.com/open?id=1Rfkx7dYSIVVgr3maIGB6WQaaPGmzpMIq"> <button type="button" class="btn btn-default animated shake"> UPEM </button></a>  <br>
-               <a href="https://drive.google.com/open?id=1XuwDvlbEcRYJmHfgwcrhDEitlNOBRKK9">  <button type="button" class="btn btn-default animated shake"> DSA </button> </a>  <br>
-               <a href="https://drive.google.com/open?id=1E-AAbLK-zb40y23AWUIgK13tj8lxOfxt"> <button type="button" class="btn btn-default animated shake"> IGT </button> </a> 
-               <a href="https://drive.google.com/open?id=1bzPpEhCKcybQeub3RYY6WMmVnt0s_Opg"> <button type="button" class="btn btn-default animated shake"> CTC </button> </a> 
+               <a href="https://drive.google.com/drive/folders/1Zs2MYifHfda-wEge644ErRA6TLnp7VKv?usp=sharing"> <button type="button"  class="btn btn-default animated shake"> Calculus-II </button></a> <br>
+               <a href="https://drive.google.com/drive/folders/1Rfkx7dYSIVVgr3maIGB6WQaaPGmzpMIq?usp=sharing"> <button type="button" class="btn btn-default animated shake"> UPEM </button></a>  <br>
+               <a href="https://drive.google.com/drive/folders/1XuwDvlbEcRYJmHfgwcrhDEitlNOBRKK9?usp=sharing">  <button type="button" class="btn btn-default animated shake"> DSA </button> </a>  <br>
+               <a href="https://drive.google.com/drive/folders/1E-AAbLK-zb40y23AWUIgK13tj8lxOfxt?usp=sharing"> <button type="button" class="btn btn-default animated shake"> IGT </button> </a> 
+               <a href="https://drive.google.com/drive/folders/1bzPpEhCKcybQeub3RYY6WMmVnt0s_Opg?usp=sharing"> <button type="button" class="btn btn-default animated shake"> CTC </button> </a> 
+	       <a href="https://drive.google.com/drive/folders/1pSqJlo1oTxqx1gipJt9fTaoPaXXp0TsU?usp=sharing"> <button type="button" class="btn btn-default animated shake"> ASSIGNMENT SOLUTIONS </button> </a> 
 			</div>
 		</div>	
 	</div>
