--- a/web/collegeupdates.html
+++ b/web/collegeupdates.html
@@ -4,5 +4,7 @@
     <h1> College Announcements</h1>
     <p>The lockdown has extended and untill further notice comes, online classes will continue.
     </p>
+    <a class="embedly-card" data-card-controls="0" data-card-theme="dark" href="https://www.soa.ac.in/2nd-semester">B.Tech (2nd Semester) Online Video Lectures - SOA | SIKSHA 'O' ANUSANDHAN</a>
+<script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
 </body>
 </html>
