--- a/web/announcements.html
+++ b/web/announcements.html
@@ -2,7 +2,7 @@
 <html>
 <body>
     <h1>CSE-B Announcements</h1>
-    <p>If you have not submitted the UPEM assignment, then you can do it by 11/05/2020. <p>
+    <p>Complete your minor assignment of DSA. <p>
     
 </body>
 </html>
