--- a/web/announcements.html
+++ b/web/announcements.html
@@ -2,7 +2,7 @@
 <html>
 <body>
     <h1>CSE-B Announcements</h1>
-    <p>Assignment Submission of UPEM and DSA by tomorrow.<p>
+    <p>Assignment Submission of UPEM and DSA by 15/05/2020.<p>
     
 </body>
 </html>
