--- a/web/announcements.html
+++ b/web/announcements.html
@@ -2,7 +2,7 @@
 <html>
 <body>
     <h1>CSE-B Announcements</h1>
-    <p>	All the students of CSE-B are instructed to strictly join the online classes in CISCO Webex Meetings through the e-mail address you have submitted for Google Groups and in the form. Students are kindly requested to check their respective e-mail IDs (in the attached PDF in mail) and if there are some changes kindly message to Lakshmishree Maam or Saswat Samal.<p>
+    <p>	Submit all the assignments by 31st May,2020.<p>
     
 </body>
 </html>
