--- a/web/submit.html
+++ b/web/submit.html
@@ -93,7 +93,7 @@ hr{
 				<h1>CSE-B</h1>
 				<hr>
 				<p class="description">Welcome to Assignment Submission page of CSE-B. <br>Click the button you wish to Submit Assignment By..!</p>
-               <a href="https://forms.gle/LRZP7Q7tCYuTX3F3A"> <button type="button"  class="btn btn-default animated shake">Submit May'2020 Assignment of Calculus and IGT</button></a>  
+               <a href="https://forms.gle/LRZP7Q7tCYuTX3F3A", target="_blank"> <button type="button"  class="btn btn-default animated shake">Submit May'2020 Assignment of Calculus and IGT</button></a>  
 			</div>
 		</div>	
 	</div>
