College Updates & Assignment Submission Added

--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@ hr{
 				<p class="description">Welcome to the web page of CSE-B. <br>Click the buttons for more information!</p>
                <a href="/web/studentinfo.html"> <button type="button"  class="btn btn-default animated shake">Students information</button></a> <br>
                <a href="/web/teachers.html"> <button type="button" class="btn btn-default animated shake">Teachers information</button></a>  <br>
-               <a href="/web/timetable.html">  <button type="button" class="btn btn-default animated shake">College Updates</button> </a>  <br>
+               <a href="https://www.soa.ac.in/iter", target="_blank">  <button type="button" class="btn btn-default animated shake">College Updates</button> </a>  <br>
                <a href="/web/timetable.html"> <button type="button" class="btn btn-default animated shake">Online Classes</button> </a> 
-			</div>
+		<a href="https://forms.gle/i5n9KVwpzqMrcE669"> <button type="button" class="btn btn-default animated shake">Submit Assignment of IGT and Calculus!</button> </a> 
+	</div>
 		</div>	
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
