--- a/index.html
+++ b/index.html
@@ -93,11 +93,13 @@ hr{
 				<h1>CSE-B</h1>
 				<hr>
 				<p class="description">Welcome to the web page of CSE-B. <br>Click the buttons for more information!</p>
-               <a href="/web/studentinfo.html"> <button type="button"  class="btn btn-default animated shake">Students information</button></a> <br>
+               <a href="mailto:samalsaswat0@gmail.com?subject=CTC, CSE-B, Assignment Submission:"> <button type="button" class="btn btn-default animated shake"> CTC Assignment Submission </button></a> <br>
+		<a href="https://forms.gle/i5n9KVwpzqMrcE669"> <button type="button" class="btn btn-default animated shake">Submit Assignment of IGT and Calculus!</button> </a> <br>
+		<a href="/web/studentinfo.html"> <button type="button"  class="btn btn-default animated shake">Students information</button></a> <br>
                <a href="/web/teachers.html"> <button type="button" class="btn btn-default animated shake">Teachers information</button></a>  <br>
                <a href="https://www.soa.ac.in/iter", target="_blank">  <button type="button" class="btn btn-default animated shake">College Updates</button> </a>  <br>
                <a href="/web/timetable.html"> <button type="button" class="btn btn-default animated shake">Online Classes</button> </a> 
-	      <a href="https://forms.gle/i5n9KVwpzqMrcE669"> <button type="button" class="btn btn-default animated shake">Submit Assignment of IGT and Calculus!</button> </a> 
+	       
 	</div>
 	</div>	
 	</div>
