--- a/index.html
+++ b/index.html
@@ -100,5 +100,6 @@ hr{
 			</div>
 		</div>	
 	</div>
+    <script data-ad-client="ca-pub-3644043349925813" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </body>
