--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+  
 <html lang="en">
 <head>
 	<meta charset="UFT-8">
@@ -16,10 +17,7 @@ body {
   text-align:center;
   width:100%;
   height:100%;
-	background: rgba(244,165,96,1);
-  background: -webkit-linear-gradient(bottom left, rgba(244,165,96,1) 0%, rgba(245,190,144,1) 100%);
-    background: -o-linear-gradient(bottom left, rgba(244,165,96,1) 0%, rgba(245,190,144,1) 100%);
-    background: linear-gradient(to top right, rgba(244,165,96,1) 0%, rgba(245,190,144,1) 100%);
+	background-color: black;
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f4a560', endColorstr='#f5be90', GradientType=1 );
 }
 
@@ -49,7 +47,7 @@ h1{
 	letter-spacing: 0px;
 	font-size: 2.3em;
 	margin-top: 10px;
-	color: SaddleBrown;
+	color: black;
 }
 hr{
 	max-width: 45px;
@@ -57,7 +55,7 @@ hr{
 }
 
 .description{
-	color: #777;
+	color: black;
 	font-weight: 300;
 	font-size: 1.2em;
 	line-height: 22px;
@@ -68,7 +66,7 @@ hr{
 .btn{
 	margin-top: 10px;
 	margin-bottom: 40px;
-	background-color: SandyBrown;
+	background-color: black;
 	height: 100px;
 	width: 300px;
 	color: white;
@@ -78,7 +76,7 @@ hr{
   border-radius:5px;
 }
 .btn:hover{
-	background-color: SaddleBrown;
+	background-color: grey;
 	color: white;
 }
 
@@ -92,13 +90,13 @@ hr{
 				<p class="date">2019-2023 Batch</p>
 				<h1>CSE-B</h1>
 				<hr>
-				<p class="description">Welcome to the web page of CSE-B. <br>Click the buttons for more information!</p>
+				<p class="description">Welcome to the  Assignment Submission Page of CSE-B. <br> Click the buttons for more information!</p>
                <a href="mailto:samalsaswat0@gmail.com?subject=CTC, CSE-B, Assignment Submission:"> <button type="button" class="btn btn-default animated shake"> CTC Assignment Submission </button></a> <br>
-		<a href="https://forms.gle/i5n9KVwpzqMrcE669"> <button type="button" class="btn btn-default animated shake">Submit Assignment of IGT and Calculus!</button> </a> <br>
-		<a href="/web/studentinfo.html"> <button type="button"  class="btn btn-default animated shake">Students information</button></a> <br>
-               <a href="/web/teachers.html"> <button type="button" class="btn btn-default animated shake">Teachers information</button></a>  <br>
-               <a href="https://www.soa.ac.in/iter", target="_blank">  <button type="button" class="btn btn-default animated shake">College Updates</button> </a>  <br>
-               <a href="/web/timetable.html"> <button type="button" class="btn btn-default animated shake">Online Classes</button> </a> 
+		<a href="https://forms.gle/i5n9KVwpzqMrcE669"> <button type="button" class="btn btn-default animated shake"> IGT and Calculus Assignment Submission </button> </a> <br>
+		<a href="/web/ctc.html"> <button type="button"  class="btn btn-default animated shake"> CTC SUBMISSION STATUS </button></a> <br>
+               <a href="/web/calculus.html"> <button type="button" class="btn btn-default animated shake"> CALCULUS SUBMISSION STATUS </button></a>  <br>
+               
+               <a href="/web/igt.html"> <button type="button" class="btn btn-default animated shake"> IGT SUBMISSION STATUS </button> </a> 
 	       
 	</div>
 	</div>	
@@ -106,3 +104,4 @@ hr{
     <script data-ad-client="ca-pub-3644043349925813" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </body>
+</html>
