added buttons (studentsinfo, teachres info ,college updates and online classes)

--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@ hr{
                <a href="/web/calculus.html"> <button type="button" class="btn btn-default animated shake"> CALCULUS SUBMISSION STATUS </button></a>  <br>
                
                <a href="/web/igt.html"> <button type="button" class="btn btn-default animated shake"> IGT SUBMISSION STATUS </button> </a> 
-	       
+	       <a href="/web/studentinfo.html"> <button type="button" class="btn btn-default animated shake">  STUDENTS INFORMATION </button> </a>
+		<a href="/web/teachers.html"> <button type="button" class="btn btn-default animated shake"> TEACHERS INFORMATION </button> </a>
+		<a href="/web/collegeupdates.html"> <button type="button" class="btn btn-default animated shake"> COLLEGE UPDATES </button> </a>
+		<a href="/web/timetable.html"> <button type="button" class="btn btn-default animated shake"> ONLINE CLASSES </button> </a>
 	</div>
 	</div>	
 	</div>
