--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ hr{
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<p class="date">2019-2023 Batch</p>
-				<h1>CSE-B</h1>
+				<h1><u>CSE-B</u></h1>
 				<hr>
 				<p class="description">Welcome to the  Assignment Submission Page of CSE-B. <br> Click the buttons for more information!</p>
                <a href="mailto:samalsaswat0@gmail.com?subject=CTC, CSE-B, Assignment Submission:"> <button type="button" class="btn btn-default animated shake"> CTC Assignment Submission </button></a> <br>
