--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ hr{
 				<h1><u>CSE-B</u></h1>
 				<hr>
 				<p class="description">Welcome to the  Assignment Submission Page of CSE-B. <br> Click the buttons for more information!</p>
-               <a href="mailto:samalsaswat0@gmail.com?subject=CTC, CSE-B, Assignment Submission:"> <button type="button" class="btn btn-default animated shake"> CTC Assignment Submission </button></a> <br>
+               <a href="/web/ctc.html"> <button type="button" class="btn btn-default animated shake"> CTC Assignment Submission </button></a> <br>
 		<a href="https://forms.gle/i5n9KVwpzqMrcE669"> <button type="button" class="btn btn-default animated shake"> IGT and Calculus Assignment Submission </button> </a> <br>
 		<a href="/web/ctc.html"> <button type="button"  class="btn btn-default animated shake"> CTC SUBMISSION STATUS </button></a> <br>
                <a href="/web/calculus.html"> <button type="button" class="btn btn-default animated shake"> CALCULUS SUBMISSION STATUS </button></a>  <br>
