--- a/web/calculus.html
+++ b/web/calculus.html
@@ -507,7 +507,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012057 </td>
 
-  <td class="blue"> ubmitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
