--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@ hr{
 				<p class="description">Welcome to the  Assignment Submission Page of CSE-B. <br> Click the buttons for more information!</p>
                <a href="/web/ctc.html"> <button type="button" class="btn btn-default animated shake"> CTC Assignment Submission </button></a> <br>
 		<a href="https://forms.gle/i5n9KVwpzqMrcE669"> <button type="button" class="btn btn-default animated shake"> IGT and Calculus Assignment Submission </button> </a> <br>
-		<a href="/web/ctc.html"> <button type="button"  class="btn btn-default animated shake"> CTC SUBMISSION STATUS (50 SUBMITTED) </button></a> <br>
-               <a href="/web/calculus.html"> <button type="button" class="btn btn-default animated shake"> CALCULUS SUBMISSION STATUS (19 SUBMITTED)</button></a>  <br>
+		<a href="/web/ctc.html"> <button type="button"  class="btn btn-default animated shake"> CTC SUBMISSION STATUS </button></a> <br>
+               <a href="/web/calculus.html"> <button type="button" class="btn btn-default animated shake"> CALCULUS SUBMISSION STATUS </button></a>  <br>
                
-               <a href="/web/igt.html"> <button type="button" class="btn btn-default animated shake"> IGT SUBMISSION STATUS (27 SUBMITTED) </button> </a> 
+               <a href="/web/igt.html"> <button type="button" class="btn btn-default animated shake"> IGT SUBMISSION STATUS </button> </a> 
 	       <a href="/web/studentinfo.html"> <button type="button" class="btn btn-default animated shake">  STUDENTS INFORMATION </button> </a>
 		<a href="/web/teachers.html"> <button type="button" class="btn btn-default animated shake"> TEACHERS INFORMATION </button> </a>
 		<a href="/web/collegeupdates.html"> <button type="button" class="btn btn-default animated shake"> COLLEGE UPDATES </button> </a>
