--- a/web/calculus.html
+++ b/web/calculus.html
@@ -639,7 +639,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012176 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -711,7 +711,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012208 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -879,7 +879,7 @@ table tr:nth-child(2n+1) {
 
           <td> 1941012489 </td>
 
-          <td class="red"> Not submitted </td>
+          <td class="blue"> submitted </td>
 
           <tr>
 
@@ -975,7 +975,7 @@ table tr:nth-child(2n+1) {
 
           <td> 1941012996 </td>
 
-          <td class="red"> Not submitted </td>
+          <td class="blue"> submitted </td>
 
           <tr>
           <tr>
