--- a/web/igt.html
+++ b/web/igt.html
@@ -412,7 +412,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012005 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -711,7 +711,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012208 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -879,7 +879,7 @@ table tr:nth-child(2n+1) {
 
           <td> 1941012489 </td>
 
-          <td class="red"> Not submitted </td>
+          <td class="blue"> submitted </td>
 
           <tr>
 
