--- a/web/calculus.html
+++ b/web/calculus.html
@@ -1034,7 +1034,7 @@ table tr:nth-child(2n+1) {
 
           <td> 19410121054 </td>
 
-          <td class="red"> Not submitted </td>
+          <td class="blue"> submitted </td>
 
           <tr>
 
