--- a/web/calculus.html
+++ b/web/calculus.html
@@ -388,7 +388,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012003 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -543,7 +543,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012098 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -555,7 +555,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012099 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -675,7 +675,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012205 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -986,7 +986,7 @@ table tr:nth-child(2n+1) {
 
           <td> 1941012997 </td>
 
-          <td class="red"> Not submitted </td>
+          <td class="blue"> submitted </td>
 
           <tr>
 
