--- a/web/calculus.html
+++ b/web/calculus.html
@@ -939,7 +939,7 @@ table tr:nth-child(2n+1) {
 
           <td> 1941012807 </td>
 
-          <td class="red"> Not submitted </td>
+          <td class="blue"> submitted </td>
 
           <tr>
 
@@ -1022,7 +1022,7 @@ table tr:nth-child(2n+1) {
 
           <td> 19410121022 </td>
 
-          <td class="red"> Not submitted </td>
+          <td class="blue"> submitted </td>
 
           <tr>
 
