--- a/web/igt.html
+++ b/web/igt.html
@@ -388,7 +388,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012003 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -507,7 +507,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012057 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -543,7 +543,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012098 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -555,7 +555,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012099 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -567,7 +567,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012100 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -579,7 +579,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012102 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -591,7 +591,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012115 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -675,7 +675,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012205 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -783,7 +783,7 @@ table tr:nth-child(2n+1) {
 
       <td> 1941012282 </td>
 
-      <td class="red"> Not submitted </td>
+      <td class="blue"> submitted </td>
 
       <tr>
 
@@ -951,7 +951,7 @@ table tr:nth-child(2n+1) {
 
           <td> 1941012994 </td>
 
-          <td class="red"> Not submitted </td>
+          <td class="blue"> submitted </td>
 
           <tr>
 
@@ -986,7 +986,7 @@ table tr:nth-child(2n+1) {
 
           <td> 1941012997 </td>
 
-          <td class="red"> Not submitted </td>
+          <td class="blue"> submitted </td>
 
           <tr>
 
@@ -1010,7 +1010,7 @@ table tr:nth-child(2n+1) {
 
           <td> 19410121021 </td>
 
-          <td class="red"> Not submitted </td>
+          <td class="blue"> submitted </td>
 
           <tr>
 
