--- a/web/calculus.html
+++ b/web/calculus.html
@@ -567,7 +567,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012100 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -579,7 +579,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012102 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -591,7 +591,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012115 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -951,7 +951,7 @@ table tr:nth-child(2n+1) {
 
           <td> 1941012994 </td>
 
-          <td class="red"> Not submitted </td>
+          <td class="blue"> submitted </td>
 
           <tr>
 
@@ -1010,7 +1010,7 @@ table tr:nth-child(2n+1) {
 
           <td> 19410121021 </td>
 
-          <td class="red"> Not submitted </td>
+          <td class="blue"> submitted </td>
 
           <tr>
 
@@ -1046,7 +1046,7 @@ table tr:nth-child(2n+1) {
 
           <td> 19410121142 </td>
 
-          <td class="red"> Not submitted </td>
+          <td class="blue"> submitted </td>
 
           <tr>
 
