--- a/web/calculus.html
+++ b/web/calculus.html
@@ -627,7 +627,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012175 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -1058,7 +1058,7 @@ table tr:nth-child(2n+1) {
 
           <td> 19410121169 </td>
 
-          <td class="red"> Not submitted </td>
+          <td class="blue"> submitted </td>
 
           <tr>
 
