--- a/web/calculus.html
+++ b/web/calculus.html
@@ -412,7 +412,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012005 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -723,7 +723,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012227 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
