--- a/web/igt.html
+++ b/web/igt.html
@@ -723,7 +723,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012227 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -735,7 +735,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012240 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
