--- a/web/calculus.html
+++ b/web/calculus.html
@@ -495,7 +495,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012056 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
