--- a/web/igt.html
+++ b/web/igt.html
@@ -519,7 +519,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012096 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
