--- a/web/calculus.html
+++ b/web/calculus.html
@@ -963,7 +963,7 @@ table tr:nth-child(2n+1) {
 
           <td> 1941012995 </td>
 
-          <td class="red"> Not submitted </td>
+          <td class="blue"> submitted </td>
 
           <tr>
 
