--- a/web/igt.html
+++ b/web/igt.html
@@ -365,7 +365,7 @@ table tr:nth-child(2n+1) {
 <div class="table-users">
 
 <div class="header"> <u><strong>CSE-'B' IGT ASSIGNMENT SUBMISSION </strong></u></div>
-<div class="headermove"><marquee>The last date of submission is 31/05/2020 by 12:00 PM. After that no submissions will be entertained!!</marquee></div>
+<div class="headermove"><marquee> THE SUBMISSION IS CLOSED NOW. </marquee></div>
 <table cellspacing="0">
 
 <tr>
