--- a/web/calculus.html
+++ b/web/calculus.html
@@ -55,7 +55,7 @@ body * {
 
 .headermove {
 
-  background-color: blue;
+  background-color: red;
 
   color: white;
    font-size: 1.0em;
@@ -365,7 +365,7 @@ table tr:nth-child(2n+1) {
 <div class="table-users">
 
 <div class="header"> <u><strong>CSE-'B' CALCULUS ASSIGNMENT SUBMISSION </strong></u></div>
-<div class="headermove"><marquee> THE SUBMISSION IS CLOSED NOW. </marquee></div>
+<div class="headermove"><marquee> THE SUBMISSIONS ARE NOW CLOSED !!! </marquee></div>
 <table cellspacing="0">
 
 <tr>
