--- a/web/igt.html
+++ b/web/igt.html
@@ -365,7 +365,7 @@ table tr:nth-child(2n+1) {
 <div class="table-users">
 
 <div class="header"> <u><strong>CSE-'B' IGT ASSIGNMENT SUBMISSION </strong></u></div>
-<div class="headermove"><marquee> THE SUBMISSION IS CLOSED NOW.  THOSE WHO HAVE SUBMITTED WRONG FILE HAVE BEEN MARKED (NOT SUBMITTED) </marquee></div>
+<div class="headermove"><marquee> THE SUBMISSION IS CLOSED NOW. </marquee></div>
 <table cellspacing="0">
 
 <tr>
