--- a/web/igt.html
+++ b/web/igt.html
@@ -1046,7 +1046,7 @@ table tr:nth-child(2n+1) {
 
           <td> 19410121142 </td>
 
-          <td class="red"> not submitted </td>
+          <td class="blue"> submitted </td>
 
           <tr>
 
