--- a/web/igt.html
+++ b/web/igt.html
@@ -747,7 +747,7 @@ table tr:nth-child(2n+1) {
 
       <td> 1941012241 </td>
 
-      <td class="red"> Not submitted </td>
+      <td class="blue"> submitted </td>
 
       <tr>
 
