--- a/web/igt.html
+++ b/web/igt.html
@@ -365,7 +365,7 @@ table tr:nth-child(2n+1) {
 <div class="table-users">
 
 <div class="header"> <u><strong>CSE-'B' IGT ASSIGNMENT SUBMISSION </strong></u></div>
-<div class="headermove"><marquee> THE SUBMISSIONS ARE NOW CLOSED.         THE SUBMISSIONS ARE NOW CLOSED.      THE SUBMISSIONS ARE NOW CLOSED. </marquee></div>
+<div class="headermove"><marquee> THE SUBMISSIONS ARE NOW CLOSED. </marquee></div>
 <table cellspacing="0">
 
 <tr>
