--- a/web/calculus.html
+++ b/web/calculus.html
@@ -651,7 +651,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012177 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -663,7 +663,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012203 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
