--- a/web/ctc.html
+++ b/web/ctc.html
@@ -652,7 +652,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012177 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -808,7 +808,7 @@ table tr:nth-child(2n+1) {
 
       <td> 1941012283 </td>
 
-      <td class="red"> Not submitted </td>
+      <td class="blue"> submitted </td>
 
       <tr>
 
