--- a/web/calculus.html
+++ b/web/calculus.html
@@ -687,7 +687,7 @@ table tr:nth-child(2n+1) {
 
   <td> 1941012206 </td>
 
-  <td class="red"> Not submitted </td>
+  <td class="blue"> submitted </td>
 
   <tr>
 
@@ -807,7 +807,7 @@ table tr:nth-child(2n+1) {
 
       <td> 1941012283 </td>
 
-      <td class="red"> Not submitted </td>
+      <td class="blue"> submitted </td>
 
       <tr>
 
