--- a/web/collegeupdates.html
+++ b/web/collegeupdates.html
@@ -4,5 +4,32 @@
     <h1> College Announcements</h1>
     <p>The lockdown has extended and untill further notice comes, online classes will continue.
     </p>
+    <h2>For Database - SOA Placement Cell - 2023 Graduating Batch</h2>
+    <p>Dear Student,
+Please go through the google form steadily and fill-up the details before 6 June 2020 positively.
+
+****  The instructions and time frame for submission will be followed strictly. Please take care accordingly.
+****  This mail is communicated to all the students who had submitted the details earlier. However, if some of your friends still have missed out earlier, you convey the same to your friends to fill-up this form.
+****  If any one of your friends is missing out this communication might be because of the wrong email ID in earlier submission, forward it.
+****   Please try to create a new email ID, preferably consisting of your regd. no and first name e.g. 180123456.John@gmail.com and this ID will be unique in nature because of Regd. no.
+****  Accordingly your existing email ID can be Secondary and the newly created one can be the Primary for us.
+**** Two Class Representatives need to be associated from each section (one boy and one girl), which will be decided from our end. There is no relation with any other CR group. The CR will be responsible to pass-on all necessary information sincerely and do the needful as and when required on behalf of his/her respective section.
+****  ADHERE TO THE INSTRUCTIONS AND TIME FRAME. NO COMPROMISE IN THIS RESPECT.
+
+
+GOOGLE FORM LINK: https://forms.gle/zMbRh6gUQSuKb14d9
+
+All the best guys !!
+
+Dr Sujit Kumar Dash
+
+Professor & Head
+
+Corporate Engagement, Training & Placement
+
+Siksha O Anusandhan (SOA) University
+
+Jagamara, Khandagiri, Bhubaneswar - 751030
+    </p>
 </body>
 </html>
