Happy Friend-Anniversary!

--- a/web/announcements.html
+++ b/web/announcements.html
@@ -2,7 +2,6 @@
 <html>
 <body>
     <h1>CSE-B Announcements</h1>
-    <p>	Submit all the assignments by 31st May,2020.<p>
-    
+    <p>	Happy Friend-Anniversary! Exactly one year back we all had started this journey and it's been a year now! Cheers to friendship! ♥.<p>
 </body>
 </html>
