THE MID SEMESTER EXAMINATION UPDATE ADDED

--- a/web/announcements.html
+++ b/web/announcements.html
@@ -2,6 +2,6 @@
 <html>
 <body>
     <h1>CSE-B Announcements</h1>
-    <p>	Happy Friend-Anniversary! Exactly one year back we all had started this journey and it's been a year now! Cheers to friendship! ♥.<p>
+    <p>	Check announcements for the students WHO HAVE NOT APPEARED THE MID SEMESTER EXAMINATION.<p>
 </body>
 </html>
