--- a/web/collegeupdates.html
+++ b/web/collegeupdates.html
@@ -2,6 +2,10 @@
 <html>
 <body>
     <h1> College Announcements</h1>
+    <p>---17/08/2020---</p>
+    <h2>NOTICE FOR B.TECH. 2ND MID SEMESTER EXAMINATIONS FOR THE STUDENTS WHO HAVE NOT APPEARED THE MID SEMESTER EXAMINATION</h2>
+    <p> College has published the dates of re-mid semester examniation for the students who have not appeared the MID SEMESTER EXAMINATION. </p>
+    <p> Check the time table here: <a href="https://www.soa.ac.in/iter-exam-notice/2020/8/10/6th-sem-mid-sem-programme-yfnly">RE-MID TIMETABLE.</a>
     <p>The lockdown has extended and untill further notice comes, online classes will continue.
     </p>
     <h2>For Database - SOA Placement Cell - 2023 Graduating Batch</h2>
