online exam time table added

--- a/web/timetable.html
+++ b/web/timetable.html
@@ -92,10 +92,11 @@ h3{
 </head>
 <body translate="no">
 <div class="container">
-<h3>Online Classes Time Table</h3>
+<h3>Online Exams Time Table</h3>
 <h6>For Second Semster Students only</h6>
 <div class="table-responsive">
-
+  
+<!-- 
 <table class="table table-striped table-bordered table-hover table-fixed table-4-col">
 <thead class="thead-dark">
 <tr>
@@ -146,6 +147,7 @@ h3{
 </table>
 </div>
 </div>
-
+-->
+ <iframe src="https://drive.google.com/file/d/1XCAqX9avS7EBX96z8pktE4yw6NpQ_juM/preview" width="640" height="480"></iframe>
 </body>
 </html>
