--- a/web/timetable.html
+++ b/web/timetable.html
@@ -90,11 +90,10 @@ h3{
 </script>
 
 </head>
-<body translate="no">
-<div class="container">
+<body>
 <h3>Online Exams Time Table</h3>
 <h6>For Second Semster Students only</h6>
-<div class="table-responsive">
+
   
 <!-- 
 <table class="table table-striped table-bordered table-hover table-fixed table-4-col">
