Online Exam Update

--- a/web/announcements.html
+++ b/web/announcements.html
@@ -2,6 +2,6 @@
 <html>
 <body>
     <h1>CSE-B Announcements</h1>
-    <p>	Check announcements for the students WHO HAVE NOT APPEARED THE MID SEMESTER EXAMINATION.<p>
+    <p>	Check ONLINE CLASSES for the time table of the END SEMESTER Exams..<p>
 </body>
 </html>
