--- a/web/collegeupdates.html
+++ b/web/collegeupdates.html
@@ -2,6 +2,10 @@
 <html>
 <body>
     <h1> College Announcements</h1>
+    <p>---21/08/2020---</p>
+    <h2>NOTICE FOR B.TECH. 2ND END SEMESTER EXAMINATIONS FOR THE STUDENTS </h2>
+    <p> College has published the dates of end semester examniation for the students of session 2020. Kindly check the ONLINE CLASSES section for the time table. </p>
+    <br>
     <p>---17/08/2020---</p>
     <h2>NOTICE FOR B.TECH. 2ND MID SEMESTER EXAMINATIONS FOR THE STUDENTS WHO HAVE NOT APPEARED THE MID SEMESTER EXAMINATION</h2>
     <p> College has published the dates of re-mid semester examniation for the students who have not appeared the MID SEMESTER EXAMINATION. </p>
