--- a/web/timetable.html
+++ b/web/timetable.html
@@ -90,7 +90,8 @@ h3{
 </script>
 
 </head>
-<body>
+<body translate="no">
+ <div class="container">
 <h3>Online Exams Time Table</h3>
 <h6>For Second Semster Students only</h6>
 
@@ -147,6 +148,6 @@ h3{
 </div>
 </div>
 -->
- <iframe src="https://drive.google.com/file/d/1XCAqX9avS7EBX96z8pktE4yw6NpQ_juM/preview" width="640" height="480"></iframe>
+ <iframe src="https://drive.google.com/file/d/1XCAqX9avS7EBX96z8pktE4yw6NpQ_juM/preview" width="900" height="1600"></iframe>
 </body>
 </html>
