--- a/web/announcements.html
+++ b/web/announcements.html
@@ -2,6 +2,6 @@
 <html>
 <body>
     <h1>CSE-B Announcements</h1>
-    <p>	Check ONLINE CLASSES for the time table of the END SEMESTER Exams..<p>
+    <p>	No New Annoucement right now.<p>
 </body>
 </html>
