--- a/web/assignment/statusassignment.html
+++ b/web/assignment/statusassignment.html
@@ -176,7 +176,7 @@ ol {
     </div>
     <div class="window-main">
         <ol>
-            <h1> ASSIGNMENTS QUESTIONS </h1>
+            <h1> ASSIGNMENTS STATUS </h1>
     <br>   <br>
   <br>
   <br>
