--- a/web/assignment/assignmentsolutions.html
+++ b/web/assignment/assignmentsolutions.html
@@ -176,7 +176,7 @@ ol {
     </div>
     <div class="window-main">
         <ol>
-            <h1> ASSIGNMENT SUBMISSIONS </h1>
+            <h1> ASSIGNMENT SOLUTIONS </h1>
     <br>   <br>
   <br>
   <br>
@@ -189,7 +189,7 @@ ol {
   <br>  
   <br>
   <br>
-            <h5>Last Updated On: 22/10/2020  11:00AM</h25
+            <h5>Last Updated On: 23/10/2020  11:00PM</h25
 
         </ol>
     </div>
