--- a/web/announcements/collegeannouncements.html
+++ b/web/announcements/collegeannouncements.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <h1>College Announcements</h1>
-    <br>
-    <br>
-    <br>
-    <p>	No New Annoucement right now.<p>
-    <br>
-    <br>
-    <br>
-    <h6>Last Updated on: 22/10/2020 5:30PM</h6>
+   // <h1>College Announcements</h1>
+  // <br>
+   // <br>
+  //  <br>
+   // <p>	No New Annoucement right now.<p>
+   // <br>
+   // <br>
+   // <br>
+   // <h6>Last Updated on: 22/10/2020 5:30PM</h6>
+    <iframe src="https://soadu.app.box.com/embed/s/rri6wtm1ffd6g3rs1jl9arzs542nusal?sortColumn=date&view=list" width="970" height="1900" frameborder="0" allowfullscreen webkitallowfullscreen msallowfullscreen></iframe>
 </body>
 </html>
