--- a/web/announcements/collegeannouncements.html
+++ b/web/announcements/collegeannouncements.html
@@ -211,7 +211,7 @@ body {
     </script>
 
             <div class="col-xs-12 col-sm-12 col-md-3 col-lg-4 iamCol">
-            <p>Last Updated On: 27/10/2020 | 1:30AM</p>
+            <p>Updated On: 27/10/2020 | 1:30AM</p>
           </div>
 
 </body>
