--- a/web/announcements/collegeannouncements.html
+++ b/web/announcements/collegeannouncements.html
@@ -22,7 +22,7 @@
 @import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css);
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,900);
 
-body { background-color: black; }
+body { background-color: white; }
 
 html, body {
   width: 100%;
