--- a/web/announcements/collegeannouncements.html
+++ b/web/announcements/collegeannouncements.html
@@ -58,7 +58,7 @@ body {
   width: 80% !important;
 }
 #textSlider div {
-  color: #FFF;
+  color: #000000;
   font-family: 'Lato', sans-serif;
   text-transform: uppercase;
 }
