--- a/web/announcements/classannouncements.html
+++ b/web/announcements/classannouncements.html
@@ -193,7 +193,7 @@ body {
             <div class="scroller">
               <div class="inner">
                 <p>No Announcemnts till now!</p>
-                <p>All information about college</p>
+                <p>All info about class</p>
                 <p>will be updated here...</p>
                 <p>Stay Tuned!</p>
                 <p>Stay Tuned!</p>
