--- a/web/assignment/questionassignment.html
+++ b/web/assignment/questionassignment.html
@@ -180,7 +180,8 @@ ol {
     <br>   <br>
   <br>
   <br>
-            <h1>NO ASSIGNMENTS ASSIGNED YET !!!</h1>
+          <h1>CSW Strings Assignment :  </h1>
+          <p> <a href="https://drive.google.com/u/2/uc?id=1AQNn5-h2BRfAz2I7M7-I6BD2AMGGdHgj&export=download">Click to download.</a>
 
    <br>
   <br>
