--- a/web/assignment/questionassignment.html
+++ b/web/assignment/questionassignment.html
@@ -38,6 +38,14 @@ body {
 h1{
     text-align: center;
 }
+a{
+    text-align: center;
+    color: white;
+}
+p
+  {
+    text-align: center;
+  }
 h5{
     text-align: center;
 }
@@ -190,7 +198,7 @@ ol {
   <br>  
   <br>
   <br>
-            <h5>Last Updated On: 24/10/2020  11:00PM</h25
+          <h5>Last Updated On: 03/11/2020  10:48AM</h5>
 
         </ol>
     </div>
