--- a/web/assignment/questionassignment.html
+++ b/web/assignment/questionassignment.html
@@ -189,7 +189,7 @@ ol {
   <br>
   <br>
           <h1>CSW Strings Assignment :  </h1>
-          <p> <a href="https://drive.google.com/u/2/uc?id=1AQNn5-h2BRfAz2I7M7-I6BD2AMGGdHgj&export=download" target="_blank">Click to download.</a>
+          <p> <a href="https://drive.google.com/file/d/1AQNn5-h2BRfAz2I7M7-I6BD2AMGGdHgj/view?usp=sharing">View it</a>
 
    <br>
   <br>
